--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="https://rnobleza.github.io/portfolio">Portfolio</a>
+                <a class="nav-link" href="https://rnobleza.github.io/">Rosemarie Nobleza, Aspiring Software/Web Developer</a>
               </li>
-              <!--<li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="https://rnobleza.github.io/portfolio">portfolio</a>
               </li>
+              <!--
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Projects
@@ -67,7 +68,7 @@
 
       <div class="grid">
       
-        <header>Welcome to Rose's Portfolio!</header>
+        <header>Welcome to Rose's Page!</header>
 
       <aside>
         <div>
@@ -75,16 +76,16 @@
         </div>
         <div class ="contact">
           <br>
-          E-mail: rnobleza@gmail.com<br>
+          <b>e-mail </b>rnobleza@gmail.com<br>
           <br>
-          GitHub: rnobleza<br>
-          LinkedIn: rosemarienobleza<br>
+          <b>github: </b>rnobleza<br>
+          <b>linkedin: </b>rosemarienobleza<br>
         </div>
 
       </aside>
 
       <article>
-        My name is Rose and I'm an aspiring/future web developer in Seattle, WA USA.<br>
+        My name is Rose and I'm an aspiring/future software/web developer in Seattle, WA USA.<br>
         <br>
         I'm currently an accountant and have been working primarily in the small/mid size tech space.<br> 
         <br>
