--- a/portfolio.html
+++ b/portfolio.html
@@ -28,5 +28,73 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="https://rnobleza.github.io/"><img src="images/rose.png" alt="Rose's Portfolio" width="50" height="50" class="icon"/></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="https://rnobleza.github.io/">Rosemarie Nobleza, Aspiring Software/Web Developer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="https://rnobleza.github.io/portfolio">portfolio</a>
+              </li>
+              <!--
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Projects
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>-->
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+      <div class ="portfolioItems">
+        <a href="https://github.com/rnobleza/PacMen">
+            <img src="images/PacMen.jpg" class="portfolioPic"/><br>
+            <div class="portfolioText">
+                <h2>PacMen</h2>
+                Exercise on DOM manipulation. Added pacman image to game div at a random position. Pacmen bounce off screen edges at a random velocity.
+            </div>
+        </a>
+      </div>
+
+      <div class ="portfolioItems">
+        <a href="https://github.com/rnobleza/Eye">
+            <img src="images/eye.jpg" class="portfolioPic"/><br>
+            <div class="portfolioText">
+                <h2>Eye Exercise</h2>
+                Exercise illustrating mouse events. Added a second "eye" element. Second "eye" follows mouse position on the screen using mouse events same as the first "eye".
+            </div>
+        </a>
+      </div>
+
+      <div class ="portfolioItems">
+        <a href="https://github.com/rnobleza/RealTimeBusTracking">
+            <img src="images/Bus.jpg" class="portfolioPic"/><br>
+            <div class="portfolioText">
+                <h2>Real Time Bus Tracking</h2>
+                <p style="word-wrap: break-word; word-break: break-all;">
+                Exercise illustrating working with the DOM to add animation with Java Script. Use of MBTA bus data and Mapbox library. Created marker and implemented move() function to move marker from one bus stop to the next.</p>
+            </div>
+        </a>
+      </div>
 
 </body>
