--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
 
       <div class ="portfolioItems">
         <a href="https://github.com/rnobleza/Eye">
-            <img src="images/eye.jpg" class="portfolioPic"/><br>
+            <img src="images/Eye.jpg" class="portfolioPic"/><br>
             <div class="portfolioText">
                 <h2>Eye Exercise</h2>
                 Exercise illustrating mouse events. Added a second "eye" element. Second "eye" follows mouse position on the screen using mouse events same as the first "eye".
