--- a/index.html
+++ b/index.html
@@ -107,11 +107,17 @@
 
       <aside>
 
-        Technologies<br>
+      <ul>Technologies
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Javascript</li>
+        </ul>
         <br>
 
+        <ul>Software
+          <li>Visual Code</li>
+        </ul>
         <br>
-        Software<br>
 
       </aside>
       
