--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
           <b>e-mail </b>
             <a href="mailto:rnobleza@gmail.com">  <i class="bi bi-envelope-fill"></i> rnobleza@gmail.com</a><br>
           <br>
-          <b>github: </b>
+          <b>github </b>
             <a href="https://github.com/rnobleza">  <i class="bi-github" role="img" aria-label="GitHub"></i> rnobleza</a><br>
-          <b>linkedin: </b>
+          <b>linkedin </b>
             <a href="https://www.linkedin.com/in/rosemarienobleza">  <i class="bi bi-linkedin"></i> rosemarienobleza</a><br>
         </div>
 
